k8s/bitcoin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-core-service
spec:
  selector:
    app: bitcoin-core
  ports:
    - protocol: TCP
      port: 8332
      targetPort: 8332
